force-app/main/default/objects/Migration_Status__c/Migration_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Migration Status</label>
</CustomObject>