force-app/main/default/objects/Migration_Status__c/fields/Current_Migration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Migration_Stage__c</fullName>
    <label>Current Migration Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>