force-app/main/default/objects/Migration_Status__c/fields/Metadata_Created__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Created</label>
    <type>Checkbox</type>
</CustomField>