force-app/main/default/objects/Migration_Status__c/fields/Pre_Requisite_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Requisite_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Requisite Status</label>
    <type>Checkbox</type>
</CustomField>