force-app/main/default/objects/Migration_Status__c/fields/Ready_to_Launch__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Launch</label>
    <type>Checkbox</type>
</CustomField>