force-app/main/default/objects/Migration_Status__c/fields/Running_Metadata_Job__c.field-meta.xml
<CustomField>
    <fullName>Running_Metadata_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Running Metadata Job</label>
    <type>Checkbox</type>
</CustomField>