force-app/main/default/objects/Migration_Status__c/fields/Source_Record_ID_Metadata_Created__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_ID_Metadata_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Record ID Metadata Created</label>
    <type>Checkbox</type>
</CustomField>