force-app/main/default/objects/Migration_Status__c/fields/VendorRecordStatus__c.field-meta.xml
<CustomField>
    <fullName>VendorRecordStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VendorRecordStatus</label>
    <type>Checkbox</type>
</CustomField>